<?php
declare(strict_types=1);

namespace Acme\Shop\Domain\Models\Item;

use Acme\Shop\Domain\Models\Identifier;

/**
 * 商品ID
 */
final class ItemId extends Identifier
{
}
